# apigate/api/docs/swagger.json
@@ -61,6 +61,34 @@
                 }
             }
         },
+        "/v1/users/idfromtoken": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "This api for Get User By Token ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get User By ID From Token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/users/list": {
             "get": {
                 "description": "This api uses for getting users list",
@@ -101,7 +129,8 @@
             }
         },
         "/v1/users/login": {
-            "get": {
+            "post": {
+                "description": "This api for logIn user",
                 "consumes": [
                     "application/json"
                 ],
@@ -114,18 +143,13 @@
                 "summary": "LogIn User",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Email",
-                        "name": "email",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Password",
-                        "name": "password",
-                        "in": "path",
-                        "required": true
+                        "description": "Passvor and Email",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.LogInRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -371,6 +395,17 @@
                 }
             }
         },
+        "v1.LogInRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "v1.Media": {
             "type": "object",
             "properties": {
@@ -407,6 +442,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "GetMyProfile",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
