# apigate/api/handlers/v1/handler.go
@@ -42,28 +42,51 @@ func New(c *HandlerV1Config) *handlerV1 {
 	}
 }
 
+// func CheckClaims(h *handlerV1, c *gin.Context) jwt.MapClaims {
+// 	var (
+// 		ErrUnauthorized = errors.New("unauthorized")
+// 		authorization   JwtRequestModel
+// 		claims          jwt.MapClaims
+// 		err             error
+// 	)
+
+// 	authorization.Token = c.GetHeader("Authorization")
+// 	if c.Request.Header.Get("Authorization") == "" {
+// 		c.JSON(http.StatusUnauthorized, ErrUnauthorized)
+// 		h.log.Error("Unauthorized request: ", logger.Error(ErrUnauthorized))
+// 		return nil
+// 	}
+
+// 	h.jwtHandler.Token = authorization.Token
+// 	claims, err = h.jwtHandler.ExtractClaims()
+// 	if err != nil {
+// 		c.JSON(http.StatusUnauthorized, ErrUnauthorized)
+// 		h.log.Error("Invalid token", logger.Error(ErrUnauthorized))
+// 		return nil
+// 	} 	
+// 	return claims
+// }
+
 func CheckClaims(h *handlerV1, c *gin.Context) jwt.MapClaims {
 	var (
-		ErrUnauthorized = errors.New("Authorization")
-		authorization   JwtRequestModel
-		claims          jwt.MapClaims
-		err             error
+	  ErrUnauthorized = errors.New("unauthorized")
+	  authorization   JwtRequestModel
+	  claims          jwt.MapClaims
+	  err             error
 	)
-
+  
 	authorization.Token = c.GetHeader("Authorization")
 	if c.Request.Header.Get("Authorization") == "" {
-		c.JSON(http.StatusUnauthorized, ErrUnauthorized)
-		h.log.Error("Unauthorized request: ", logger.Error(ErrUnauthorized))
-		return nil
+	  c.JSON(http.StatusUnauthorized, ErrUnauthorized)
+	  h.log.Error("Unauthorized request:", logger.Error(err))
+  
 	}
-
 	h.jwtHandler.Token = authorization.Token
 	claims, err = h.jwtHandler.ExtractClaims()
 	if err != nil {
-		c.JSON(http.StatusUnauthorized, ErrUnauthorized)
-		h.log.Error("Invalid token", logger.Error(ErrUnauthorized))
-		return nil
-	} 	
+	  c.JSON(http.StatusUnauthorized, ErrUnauthorized)
+	  h.log.Error("token is invalid:", logger.Error(err))
+	  return nil
+	}
 	return claims
-}
-
+  }
